--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Design Life Kids</title>
   </head>
   <body>
     <header>
       <a class="header-logo" href="#"><img src="/logo.png" alt="logo"/></a>
-      <nav class="header-logo">
+      <nav class="header-nav">
         <ul>
           <li class="nav-link"><a href="#">Blog</a></li>
           <li class="nav-link"><a href="#">Catalog</a></li>
@@ -23,7 +23,8 @@
         </ul>
       </nav>
     </header>
-    <section>
+    <section class="slider">
+      <h1 class="hidden">Design Kids Life Collection</h1>
       <p class="number">01</p>
       <ul class="slider">
         <li class="slider-line active"></li>
@@ -31,37 +32,39 @@
         <li class="slider-line"></li>
         <li class="slider-line"></li>
       </ul>
-      <h1>THE OOH NOO<br />COLLECTION</h1>
-      <p>Designed in Slovenia</p>
+      <h2>THE OOH NOO COLLECTION</h2>
+      <p class="slider-subtitle">Designed in Slovenia</p>
       <button class="button button_black">Explore Now</button>
-      <p>Free (continental) USA shipping on all orders of $100 USD or more!</p>
+      <p class="slider-footer">
+        Free (continental) USA shipping on all orders of $100 USD or more!
+      </p>
     </section>
-    <section>
-      <h2>Category Products</h2>
-      <ul>
-        <li><h3>APPAREL KIDS</h3></li>
-        <li><h3>HOLIDAY SHOP</h3></li>
-        <li><h3>TOYS</h3></li>
-        <li><h3>ACCESSORIES</h3></li>
+    <section class="category">
+      <h2 class="category-title">Category Products</h2>
+      <ul class="category-list">
+        <li class="category-products"><a href="">APPAREL KIDS</a></li>
+        <li class="category-products"><a href="">HOLIDAY SHOP</a></li>
+        <li class="category-products"><a href="">TOYS</a></li>
+        <li class="category-products"><a href="">ACCESSORIES</a></li>
       </ul>
-      <p>
+      <p class="category-subtitle">
         Modern finds for the modern home. Curated goods by unique designers
         around the world from fashion to furniture for kids and adults.
       </p>
     </section>
-    <section>
-      <h2>Delivery</h2>
-      <ul>
-        <li>Delivery</li>
-        <li>Guarantee</li>
-        <li>Credit</li>
+    <section class="services">
+      <h2 class="services-title">Delivery</h2>
+      <ul class="services-list">
+        <li><button class="button services-button">Delivery</button></li>
+        <li><button class="button services-button">Guarantee</button></li>
+        <li><button class="button services-button">Credit</button></li>
       </ul>
-      <p>
+      <p class="services-text">
         Some days i feel like i've been working on dlk my entire life and there
         are other days that i am completely shocked that four years have flown
         by. It's simply magical.
       </p>
-      <p>
+      <p class="services-text">
         started as an outlet to deal with the traumatic loss of my husband, dlk
         has now become a truly happy place for me and i have you and all of the
         beautiful designers that we work with to thank!
@@ -86,57 +89,61 @@
       </ul>
     </section>
     <article class="about">
-      <h2>Design Life Kids</h2>
-      <h3>About Us</h3>
-      <p>
+      <h2 class="about-title">Design Life Kids</h2>
+      <div class="about-subtitle">About Us</div>
+      <p class="about-text">
         Some days i feel like i've been working on dlk my entire life and there
         are other days that i am completely shocked that four years have flown
         by. It's simply magical.
       </p>
       <a href="#" class="button button_black">Buy Now</a>
     </article>
-    <article>
-      <h2>Contacts</h2>
-      <p>
+    <article class="contacts">
+      <h2 class="contacts-title">Contacts</h2>
+      <p class="contacts-text">
         Some days i feel like i've been working on dlk my entire life and there
         are other days that i am completely shocked that four years have flown
         by. It's simply magical.
       </p>
-      <img src="/map.png" alt="map" />
+      <img class="map" src="/map.png" alt="map" />
     </article>
-    <footer>
-      <h2>Navigation</h2>
-      <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Design Services</a></li>
-        <li><a href="#">Featured On</a></li>
-        <li><a href="#">2018 Holiday Catalog</a></li>
-        <li><a href="#">Shop By Designer</a></li>
+    <footer class="footer">
+      <h2 class="footer-navigation">Navigation</h2>
+      <ul class="navigation-list">
+        <li class="navigation-list-item"><a href="#">About Us</a></li>
+        <li class="navigation-list-item"><a href="#">Blog</a></li>
+        <li class="navigation-list-item"><a href="#">Design Services</a></li>
+        <li class="navigation-list-item"><a href="#">Featured On</a></li>
+        <li class="navigation-list-item">
+          <a href="#">2018 Holiday Catalog</a>
+        </li>
+        <li class="navigation-list-item"><a href="#">Shop By Designer</a></li>
       </ul>
-      <h2>Customer Information</h2>
-      <ul>
-        <li><a href="#">Contact Us</a></li>
-        <li><a href="#">Sale Exclusions</a></li>
-        <li><a href="#">Shipping & Returns</a></li>
-        <li><a href="#">Terms & Conditions</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Search</a></li>
+      <h2 class="footer-customer-info">Customer Information</h2>
+      <ul class="customer-info-list">
+        <li class="customer-info-item"><a href="#">Contact Us</a></li>
+        <li class="customer-info-item"><a href="#">Sale Exclusions</a></li>
+        <li class="customer-info-item"><a href="#">Shipping & Returns</a></li>
+        <li class="customer-info-item"><a href="#">Terms & Conditions</a></li>
+        <li class="customer-info-item"><a href="#">Privacy Policy</a></li>
+        <li class="customer-info-item"><a href="#">Search</a></li>
       </ul>
       <h2>Connect</h2>
       <form>
         <input type="email" name="email" placeholder="Email" />
-        <button>Join</button>
+        <button type="submit">Join</button>
       </form>
-      <ul class="social">
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Pinterest</a></li>
-        <li><a href="#">Instagram</a></li>
+      <ul class="social-list">
+        <li class="social-list-item"><a href="#">Facebook</a></li>
+        <li class="social-list-item"><a href="#">Twitter</a></li>
+        <li class="social-list-item"><a href="#">Pinterest</a></li>
+        <li class="social-list-item"><a href="#">Instagram</a></li>
       </ul>
-      <p>Company Rating</p>
-      <p>Copyright © 2018 Dlk • Design Life Kids</p>
-      <p>Web Design — Direct Line Development</p>
+      <div class="company-info">
+        <p>Company Rating</p>
+        <p>Copyright © 2018 Dlk • Design Life Kids</p>
+        <p>Web Design — Direct Line Development</p>
+      </div>
     </footer>
   </body>
 </html>
