--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         <li class="social-list-item"><a href="#">Instagram</a></li>
       </ul>
       <div class="company-info">
-        <p>Company Rating</p>
-        <p>Copyright © 2018 Dlk • Design Life Kids</p>
-        <p>Web Design — Direct Line Development</p>
+        <p class="rating">Company Rating</p>
+        <p class="copyright">Copyright © 2018 Dlk • Design Life Kids</p>
+        <p class="design-company">Web Design — Direct Line Development</p>
       </div>
     </footer>
   </body>
