--- a/index.html
+++ b/index.html
@@ -27,14 +27,22 @@
       <h1 class="hidden">Design Kids Life Collection</h1>
       <p class="number">01</p>
       <ul class="slider">
-        <li class="slider-line active"></li>
-        <li class="slider-line"></li>
-        <li class="slider-line"></li>
-        <li class="slider-line"></li>
+        <li class="slider-line selected">
+          <button class="slider-button"></button>
+        </li>
+        <li class="slider-line">
+          <button class="slider-button"></button>
+        </li>
+        <li class="slider-line">
+          <button class="slider-button"></button>
+        </li>
+        <li class="slider-line">
+          <button class="slider-button"></button>
+        </li>
       </ul>
       <h2>THE OOH NOO COLLECTION</h2>
       <p class="slider-subtitle">Designed in Slovenia</p>
-      <button class="button button_black">Explore Now</button>
+      <a class="button button_black">Explore Now</a>
       <p class="slider-footer">
         Free (continental) USA shipping on all orders of $100 USD or more!
       </p>
@@ -47,7 +55,11 @@
         <li class="category-products"><a href="">TOYS</a></li>
         <li class="category-products"><a href="">ACCESSORIES</a></li>
       </ul>
-      <p class="category-subtitle">
+      <div class="arrows">
+        <button class="arrow arrow_left"></button>
+        <button class="arrow arrow_right"></button>
+      </div>
+      <p class="category-text">
         Modern finds for the modern home. Curated goods by unique designers
         around the world from fashion to furniture for kids and adults.
       </p>
@@ -59,16 +71,18 @@
         <li><button class="button services-button">Guarantee</button></li>
         <li><button class="button services-button">Credit</button></li>
       </ul>
-      <p class="services-text">
-        Some days i feel like i've been working on dlk my entire life and there
-        are other days that i am completely shocked that four years have flown
-        by. It's simply magical.
-      </p>
-      <p class="services-text">
-        started as an outlet to deal with the traumatic loss of my husband, dlk
-        has now become a truly happy place for me and i have you and all of the
-        beautiful designers that we work with to thank!
-      </p>
+      <div class="services-text">
+        <p>
+          Some days i feel like i've been working on dlk my entire life and
+          there are other days that i am completely shocked that four years have
+          flown by. It's simply magical.
+        </p>
+        <p>
+          started as an outlet to deal with the traumatic loss of my husband,
+          dlk has now become a truly happy place for me and i have you and all
+          of the beautiful designers that we work with to thank!
+        </p>
+      </div>
       <a href="" class="button button_black"></a>
     </section>
     <section class="partners">
@@ -108,27 +122,33 @@
       <img class="map" src="/map.png" alt="map" />
     </article>
     <footer class="footer">
-      <h2 class="footer-navigation">Navigation</h2>
+      <h2 class="footer-title">Navigation</h2>
       <ul class="navigation-list">
-        <li class="navigation-list-item"><a href="#">About Us</a></li>
-        <li class="navigation-list-item"><a href="#">Blog</a></li>
-        <li class="navigation-list-item"><a href="#">Design Services</a></li>
-        <li class="navigation-list-item"><a href="#">Featured On</a></li>
-        <li class="navigation-list-item">
+        <li class="menu navigation-list-item"><a href="#">About Us</a></li>
+        <li class="menu navigation-list-item"><a href="#">Blog</a></li>
+        <li class="menu navigation-list-item">
+          <a href="#">Design Services</a>
+        </li>
+        <li class="menu navigation-list-item"><a href="#">Featured On</a></li>
+        <li class="menu navigation-list-item">
           <a href="#">2018 Holiday Catalog</a>
         </li>
         <li class="navigation-list-item"><a href="#">Shop By Designer</a></li>
       </ul>
-      <h2 class="footer-customer-info">Customer Information</h2>
+      <h2 class="footer-title">Customer Information</h2>
       <ul class="customer-info-list">
-        <li class="customer-info-item"><a href="#">Contact Us</a></li>
-        <li class="customer-info-item"><a href="#">Sale Exclusions</a></li>
-        <li class="customer-info-item"><a href="#">Shipping & Returns</a></li>
-        <li class="customer-info-item"><a href="#">Terms & Conditions</a></li>
-        <li class="customer-info-item"><a href="#">Privacy Policy</a></li>
-        <li class="customer-info-item"><a href="#">Search</a></li>
+        <li class="menu customer-info-item"><a href="#">Contact Us</a></li>
+        <li class="menu customer-info-item"><a href="#">Sale Exclusions</a></li>
+        <li class="menu customer-info-item">
+          <a href="#">Shipping & Returns</a>
+        </li>
+        <li class="menu customer-info-item">
+          <a href="#">Terms & Conditions</a>
+        </li>
+        <li class="menu customer-info-item"><a href="#">Privacy Policy</a></li>
+        <li class="menu customer-info-item"><a href="#">Search</a></li>
       </ul>
-      <h2>Connect</h2>
+      <h2 class="footer-title">Connect</h2>
       <form>
         <input type="email" name="email" placeholder="Email" />
         <button type="submit">Join</button>
@@ -140,7 +160,14 @@
         <li class="social-list-item"><a href="#">Instagram</a></li>
       </ul>
       <div class="company-info">
-        <p class="rating">Company Rating</p>
+        <div class="rating">
+          <p>Company Rating</p>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+        </div>
         <p class="copyright">Copyright © 2018 Dlk • Design Life Kids</p>
         <p class="design-company">Web Design — Direct Line Development</p>
       </div>
