--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
           <button class="slider-button"></button>
         </li>
       </ul>
-      <h2>THE OOH NOO COLLECTION</h2>
-      <p class="slider-subtitle">Designed in Slovenia</p>
-      <a class="button button_black">Explore Now</a>
+      <div class="slider-content">
+        <h2>THE OOH NOO COLLECTION</h2>
+        <p class="slider-subtitle">Designed in Slovenia</p>
+        <a class="button button_black">Explore Now</a>
+      </div>
       <p class="slider-footer">
         Free (continental) USA shipping on all orders of $100 USD or more!
       </p>
@@ -55,14 +57,16 @@
         <li class="category-products"><a href="">TOYS</a></li>
         <li class="category-products"><a href="">ACCESSORIES</a></li>
       </ul>
-      <div class="arrows">
-        <button class="arrow arrow_left"></button>
-        <button class="arrow arrow_right"></button>
+      <div class="category-nav">
+        <div class="arrows">
+          <button class="arrow arrow_left"></button>
+          <button class="arrow arrow_right"></button>
+        </div>
+        <p class="category-text">
+          Modern finds for the modern home. Curated goods by unique designers
+          around the world from fashion to furniture for kids and adults.
+        </p>
       </div>
-      <p class="category-text">
-        Modern finds for the modern home. Curated goods by unique designers
-        around the world from fashion to furniture for kids and adults.
-      </p>
     </section>
     <section class="services">
       <h2 class="services-title">Delivery</h2>
@@ -169,7 +173,9 @@
           <span class="star">&#9733;</span>
         </div>
         <p class="copyright">Copyright © 2018 Dlk • Design Life Kids</p>
-        <p class="design-company">Web Design — Direct Line Development</p>
+        <p class="design-company">
+          Web Design — <a href="#">Direct Line Development</a>
+        </p>
       </div>
     </footer>
   </body>
