--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header>
-      <a class="header-logo" href="#"
-        ><img src="/images/logo.svg" alt="logo"
-      /></a>
+      <a class="header-logo" href="#">
+        <img src="/images/logo.svg" alt="logo" />
+      </a>
       <nav class="header-nav">
         <ul>
           <li class="nav-link"><a href="#">Blog</a></li>
@@ -21,7 +21,9 @@
         </ul>
         <ul>
           <li>
-            <a class="search" href="#"><img src="/search.png" alt="search"/></a>
+            <a class="search" href="#">
+              <img src="/images/search.svg" alt="search" />
+            </a>
           </li>
           <li><a class="nav-link" href="#">Contact us</a></li>
         </ul>
@@ -59,16 +61,16 @@
         <h2 class="category-title">Category Products</h2>
         <ul class="category-list">
           <li class="category-products">
-            <a href=""><img src="/images/product-1.jpg" alt="Apparel kids"/></a>
+            <a href=""><img src="/images/product-1.jpg" alt="Apparel kids"/>APPAREL KIDS</a>
           </li>
           <li class="category-products">
-            <a href=""><img src="/images/product-2.jpg" alt="Holiday shop"/></a>
+            <a href=""><img src="/images/product-2.jpg" alt="Holiday shop"/>HOLIDAY SHOP</a>
           </li>
           <li class="category-products">
-            <a href=""><img src="/images/product-3.jpg" alt="Toys"/></a>
+            <a href=""><img src="/images/product-3.jpg" alt="Toys"/>TOYS</a>
           </li>
           <li class="category-products">
-            <a href=""><img src="/images/product-4.jpg" alt="Accessories"/></a>
+            <a href=""><img src="/images/product-4.jpg" alt="Accessories"/>ACCESSORIES</a>
           </li>
         </ul>
         <div class="category-nav">
@@ -175,16 +177,16 @@
       </form>
       <ul class="social-list">
         <li class="social-list-item">
-          <a href="#"><img src="/images/Facebook.jpg" alt="Facebook"/></a>
+          <a href="#"><img src="/images/Facebook.svg" alt="Facebook"/></a>
         </li>
         <li class="social-list-item">
-          <a href="#"><img src="/images/Twitter.jpg" alt="Twitter"/></a>
+          <a href="#"><img src="/images/Twitter.svg" alt="Twitter"/></a>
         </li>
         <li class="social-list-item">
-          <a href="#"><img src="/images/Pinterest.jpg" alt="Pinterest"/></a>
+          <a href="#"><img src="/images/Pinterest.svg" alt="Pinterest"/></a>
         </li>
         <li class="social-list-item">
-          <a href="#"><img src="/images/Instagram.jpg" alt="Instagram"/></a>
+          <a href="#"><img src="/images/Instagram.svg" alt="Instagram"/></a>
         </li>
       </ul>
       <div class="company-info">
