--- a/pages/category-products/index.html
+++ b/pages/category-products/index.html
@@ -19,7 +19,9 @@
         </ul>
         <ul>
           <li>
-            <a class="search" href="#"><img src="/search.png" alt="search"/></a>
+            <a class="search" href="#">
+              <img src="/images/search.svg" alt="search" />
+            </a>
           </li>
           <li><a class="nav-link" href="#">Contact us</a></li>
         </ul>
@@ -34,41 +36,30 @@
         </ul>
         <div class="products-list">
           <ul>
-            <a href="#"
-              ><img src="/images/product-1.jpg" alt="Apparel kids"
-            /></a>
-          </ul>
-          <ul>
-            <a href="#"
-              ><img src="/images/product-2.jpg" alt="Holiday shop"
-            /></a>
-          </ul>
-          <ul>
-            <a href="#"><img src="/images/product-3.jpg" alt="Toys"/></a>
-          </ul>
-          <ul>
-            <a href="#"><img src="/images/product-4.jpg" alt="Accessories"/></a>
-          </ul>
-          <ul>
-            <a href="#"
-              ><img src="/images/product-5.jpg" alt="Apparel adults"
-            /></a>
-          </ul>
-          <ul>
-            <a href="#"><img src="/images/product-6.jpg" alt="Sale"/></a>
-          </ul>
+            <li><a href="#"><img src="/images/product-1.jpg" alt="Apparel kids"/>APPAREL KIDS</a></li>
+            <li><a href="#"><img src="/images/product-2.jpg" alt="Holiday shop"/>HOLIDAY SHOP</a></li>
+            <li><a href="#"><img src="/images/product-3.jpg" alt="Toys"/>TOYS</a></li>
+            <li><a href="#"><img src="/images/product-4.jpg" alt="Accessories"/>ACCESSORIES</a></li>
+            <li><a href="#"><img src="/images/product-5.jpg" alt="Sale"/>SALE</a></li>
+            <li><a href="#"><img src="/images/product-6.jpg" alt="Apparel adults"/>APPAREL ADULTS</a></li>
         </div>
         <div class="products-description">
           <h2>Product Description</h2>
           <p class="products-description__text">
             Interactive doll Zapf Creation Baby Born Sister can drink from a
             bottle and almost really cry. You can even bathe her, just like a
-            little sister. A toy with a height of 43 cm bends its knees, the
-            head rotates, it can stand upright. Such a doll will be an excellent
-            choice for a gift for a girl from 4 years old. The set includes a
-            miniature set of fashionable clothes, a hairbrush, a bottle for
-            water, a pair of hairpins and elastic bands for hair, as well as two
-            bracelets: one for the doll, the other for her young mistress.
+            little sister.
+          </p>
+          <p class="products-description__text">
+            A toy with a height of 43 cm bends its knees, the head rotates, it
+            can stand upright. Such a doll will be an excellent choice for a
+            gift for a girl from 4 years old.
+          </p>
+          <p class="products-description__text">
+            The set includes a miniature set of fashionable clothes, a
+            hairbrush, a bottle for water, a pair of hairpins and elastic bands
+            for hair, as well as two bracelets: one for the doll, the other for
+            her young mistress.
           </p>
         </div>
       </section>
@@ -107,16 +98,16 @@
       </form>
       <ul class="social-list">
         <li class="social-list-item">
-          <a href="#"><img src="/images/Facebook.jpg" alt="Facebook"/></a>
+          <a href="#"><img src="/images/Facebook.svg" alt="Facebook"/></a>
         </li>
         <li class="social-list-item">
-          <a href="#"><img src="/images/Twitter.jpg" alt="Twitter"/></a>
+          <a href="#"><img src="/images/Twitter.svg" alt="Twitter"/></a>
         </li>
         <li class="social-list-item">
-          <a href="#"><img src="/images/Pinterest.jpg" alt="Pinterest"/></a>
+          <a href="#"><img src="/images/Pinterest.svg" alt="Pinterest"/></a>
         </li>
         <li class="social-list-item">
-          <a href="#"><img src="/images/Instagram.jpg" alt="Instagram"/></a>
+          <a href="#"><img src="/images/Instagram.svg" alt="Instagram"/></a>
         </li>
       </ul>
       <div class="company-info">
