--- a/pages/category-products/index.html
+++ b/pages/category-products/index.html
@@ -14,7 +14,7 @@
       <nav class="header-nav">
         <ul>
           <li class="nav-link"><a href="#">Blog</a></li>
-          <li class="nav-link"><a href="#">Catalog</a></li>
+          <li class="nav-link">Catalog</li>
           <li class="nav-link"><a href="#">About us</a></li>
         </ul>
         <ul>
