--- a/pages/category-products/index.html
+++ b/pages/category-products/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Category-products</title>
+    <title>Category products</title>
   </head>
   <body>
     <header>
@@ -18,12 +18,12 @@
           <li class="nav-link"><a href="#">About us</a></li>
         </ul>
         <ul>
-          <li>
-            <a class="search" href="#">
+          <li class="nav-link search">
+            <a href="#">
               <img src="/images/search.svg" alt="search" />
             </a>
           </li>
-          <li><a class="nav-link" href="#">Contact us</a></li>
+          <li class="nav-link"><a href="#">Contact us</a></li>
         </ul>
       </nav>
     </header>
@@ -34,16 +34,26 @@
           <li><a href="/index.html">Home</a></li>
           <li>Catalog</li>
         </ul>
-        <div class="products-list">
-          <ul>
-            <li><a href="#"><img src="/images/product-1.jpg" alt="Apparel kids"/>APPAREL KIDS</a></li>
-            <li><a href="#"><img src="/images/product-2.jpg" alt="Holiday shop"/>HOLIDAY SHOP</a></li>
-            <li><a href="#"><img src="/images/product-3.jpg" alt="Toys"/>TOYS</a></li>
-            <li><a href="#"><img src="/images/product-4.jpg" alt="Accessories"/>ACCESSORIES</a></li>
-            <li><a href="#"><img src="/images/product-5.jpg" alt="Sale"/>SALE</a></li>
-            <li><a href="#"><img src="/images/product-6.jpg" alt="Apparel adults"/>APPAREL ADULTS</a></li>
-          </ul>
-        </div>
+        <ul class="category-list">
+          <li class="category-products">
+            <a href="#"><img src="/images/product-1.jpg" alt="Apparel kids" />APPAREL KIDS</a>
+          </li>
+          <li class="category-products">
+            <a href="#"><img src="/images/product-2.jpg" alt="Holiday shop" />HOLIDAY SHOP</a>
+          </li>
+          <li class="category-products">
+            <a href="/pages/toys-for-kids/index.html"><img src="/images/product-3.jpg" alt="Toys" />TOYS</a>
+          </li>
+          <li class="category-products">
+            <a href="#"><img src="/images/product-4.jpg" alt="Accessories"/>ACCESSORIES</a>
+          </li>
+          <li class="category-products">
+            <a href="#"><img src="/images/product-5.jpg" alt="Sale"/>SALE</a>
+          </li>
+          <li class="category-products">
+            <a href="#"><img src="/images/product-6.jpg" alt="Apparel adults"/>APPAREL ADULTS</a>
+          </li>
+        </ul>
         <div class="products-description">
           <h2>Product Description</h2>
           <p class="products-description__text">
