--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
           <li class="nav-link"><a href="#">About us</a></li>
         </ul>
         <ul>
-          <li>
-            <a class="search" href="#">
+          <li class="nav-link search">
+            <a href="#">
               <img src="/images/search.svg" alt="search" />
             </a>
           </li>
-          <li><a class="nav-link" href="#">Contact us</a></li>
+          <li class="nav-link"><a href="#">Contact us</a></li>
         </ul>
       </nav>
     </header>
@@ -54,23 +54,23 @@
           <a class="button button_black">Explore Now</a>
         </div>
         <p class="slider-footer">
-          Free (continental) USA shipping on all orders of $100 USD or more!
+          Free (continental) USA shipping on all orders of $100 USD or
+          more!
         </p>
       </section>
       <section class="category">
         <h2 class="category-title">Category Products</h2>
         <ul class="category-list">
           <li class="category-products">
-            <a href=""><img src="/images/product-1.jpg" alt="Apparel kids"/>APPAREL KIDS</a>
+            <a href="#"><img src="/images/product-1.jpg" alt="Apparel kids"/>APPAREL KIDS</a></li>
+          <li class="category-products">
+            <a href="#"><img src="/images/product-2.jpg" alt="Holiday shop"/>HOLIDAY SHOP</a>
           </li>
           <li class="category-products">
-            <a href=""><img src="/images/product-2.jpg" alt="Holiday shop"/>HOLIDAY SHOP</a>
+            <a href="/pages/toys-for-kids/index.html"><img src="/images/product-3.jpg" alt="Toys" />TOYS</a>
           </li>
           <li class="category-products">
-            <a href=""><img src="/images/product-3.jpg" alt="Toys"/>TOYS</a>
-          </li>
-          <li class="category-products">
-            <a href=""><img src="/images/product-4.jpg" alt="Accessories"/>ACCESSORIES</a>
+            <a href="#"><img src="/images/product-4.jpg" alt="Accessories"/>ACCESSORIES</a>
           </li>
         </ul>
         <div class="category-nav">
@@ -79,8 +79,9 @@
             <button class="arrow arrow_right"></button>
           </div>
           <p class="category-text">
-            Modern finds for the modern home. Curated goods by unique designers
-            around the world from fashion to furniture for kids and adults.
+            Modern finds for the modern home. Curated goods by unique
+            designers around the world from fashion to furniture for
+            kids and adults.
           </p>
         </div>
       </section>
@@ -88,38 +89,53 @@
         <img src="/images/Delivery.jpg" alt="lady" />
         <h2 class="services-title">Delivery</h2>
         <ul class="services-list">
-          <li><button class="button services-button">Delivery</button></li>
-          <li><button class="button services-button">Guarantee</button></li>
-          <li><button class="button services-button">Credit</button></li>
+          <li>
+            <button class="button services-button">Delivery</button>
+          </li>
+          <li>
+            <button class="button services-button">Guarantee</button>
+          </li>
+          <li>
+            <button class="button services-button">Credit</button>
+          </li>
         </ul>
         <div class="services-text">
           <p>
-            Some days i feel like i've been working on dlk my entire life and
-            there are other days that i am completely shocked that four years
-            have flown by. It's simply magical.
+            Some days i feel like i've been working on dlk my entire
+            life and there are other days that i am completely shocked
+            that four years have flown by. It's simply magical.
           </p>
           <p>
-            What started as an outlet to deal with the traumatic loss of my
-            husband, dlk has now become a truly happy place for me and i have
-            you and all of the beautiful designers that we work with to thank!
+            What started as an outlet to deal with the traumatic loss
+            of my husband, dlk has now become a truly happy place for
+            me and i have you and all of the beautiful designers that
+            we work with to thank!
           </p>
         </div>
-        <a href="" class="button button_black"></a>
+        <a href="#" class="button button_black">Learn more</a>
       </section>
       <section class="partners">
         <h2>Partners</h2>
         <ul class="partner-list">
           <li>
-            <a href="#"><img src="/images/partner-1.png" alt="Mail.ru"/></a>
+            <a href="#">
+              <img src="/images/partner-1.png" alt="Mail.ru" />
+            </a>
           </li>
           <li>
-            <a href="#"><img src="/images/partner-2.png" alt="apple"/></a>
+            <a href="#">
+              <img src="/images/partner-2.png" alt="apple" />
+            </a>
           </li>
           <li>
-            <a href="#"><img src="/images/partner-3.png" alt="Eltex"/></a>
+            <a href="#">
+              <img src="/images/partner-3.png" alt="Eltex" />
+            </a>
           </li>
           <li>
-            <a href="#"><img src="/images/partner-4.png" alt="Owox"/></a>
+            <a href="#">
+              <img src="/images/partner-4.png" alt="Owox" />
+            </a>
           </li>
         </ul>
       </section>
@@ -128,65 +144,91 @@
       <h2 class="about-title">Design Life Kids</h2>
       <div class="about-subtitle">About Us</div>
       <p class="about-text">
-        Some days i feel like i've been working on dlk my entire life and there
-        are other days that i am completely shocked that four years have flown
-        by. It's simply magical.
+        Some days i feel like i've been working on dlk my entire life
+        and there are other days that i am completely shocked that
+        four years have flown by. It's simply magical.
       </p>
       <a href="#" class="button button_black">Buy Now</a>
     </article>
     <article class="contacts">
       <h2 class="contacts-title">Contacts</h2>
       <p class="contacts-text">
-        Some days i feel like i've been working on dlk my entire life and there
-        are other days that i am completely shocked that four years have flown
-        by. It's simply magical.
+        Some days i feel like i've been working on dlk my entire life
+        and there are other days that i am completely shocked that
+        four years have flown by. It's simply magical.
       </p>
       <img class="map" src="/map.png" alt="map" />
     </article>
     <footer class="footer">
       <h2 class="footer-title">Navigation</h2>
       <ul class="navigation-list">
-        <li class="menu navigation-list-item"><a href="#">About Us</a></li>
-        <li class="menu navigation-list-item"><a href="#">Blog</a></li>
+        <li class="menu navigation-list-item">
+          <a href="#">About Us</a>
+        </li>
+        <li class="menu navigation-list-item">
+          <a href="#">Blog</a>
+        </li>
         <li class="menu navigation-list-item">
           <a href="#">Design Services</a>
         </li>
-        <li class="menu navigation-list-item"><a href="#">Featured On</a></li>
+        <li class="menu navigation-list-item">
+          <a href="#">Featured On</a>
+        </li>
         <li class="menu navigation-list-item">
           <a href="#">2018 Holiday Catalog</a>
         </li>
-        <li class="navigation-list-item"><a href="#">Shop By Designer</a></li>
+        <li class="navigation-list-item">
+          <a href="#">Shop By Designer</a>
+        </li>
       </ul>
       <h2 class="footer-title">Customer Information</h2>
       <ul class="customer-info-list">
-        <li class="menu customer-info-item"><a href="#">Contact Us</a></li>
-        <li class="menu customer-info-item"><a href="#">Sale Exclusions</a></li>
+        <li class="menu customer-info-item">
+          <a href="#">Contact Us</a>
+        </li>
+        <li class="menu customer-info-item">
+          <a href="#">Sale Exclusions</a>
+        </li>
         <li class="menu customer-info-item">
           <a href="#">Shipping & Returns</a>
         </li>
         <li class="menu customer-info-item">
           <a href="#">Terms & Conditions</a>
         </li>
-        <li class="menu customer-info-item"><a href="#">Privacy Policy</a></li>
-        <li class="menu customer-info-item"><a href="#">Search</a></li>
+        <li class="menu customer-info-item">
+          <a href="#">Privacy Policy</a>
+        </li>
+        <li class="menu customer-info-item">
+          <a href="#">Search</a>
+        </li>
       </ul>
       <h2 class="footer-title">Connect</h2>
       <form>
         <input type="email" name="email" placeholder="Email" />
-        <button type="submit">Join</button>
+        <button class="button button_black" type="submit">
+          Join
+        </button>
       </form>
       <ul class="social-list">
         <li class="social-list-item">
-          <a href="#"><img src="/images/Facebook.svg" alt="Facebook"/></a>
+          <a href="#">
+            <img src="/images/Facebook.svg" alt="Facebook" />
+          </a>
         </li>
         <li class="social-list-item">
-          <a href="#"><img src="/images/Twitter.svg" alt="Twitter"/></a>
+          <a href="#">
+            <img src="/images/Twitter.svg" alt="Twitter" />
+          </a>
         </li>
         <li class="social-list-item">
-          <a href="#"><img src="/images/Pinterest.svg" alt="Pinterest"/></a>
+          <a href="#">
+            <img src="/images/Pinterest.svg" alt="Pinterest" />
+          </a>
         </li>
         <li class="social-list-item">
-          <a href="#"><img src="/images/Instagram.svg" alt="Instagram"/></a>
+          <a href="#">
+            <img src="/images/Instagram.svg" alt="Instagram" />
+          </a>
         </li>
       </ul>
       <div class="company-info">
@@ -198,11 +240,37 @@
           <span class="star">&#9733;</span>
           <span class="star">&#9733;</span>
         </div>
-        <p class="copyright">Copyright © 2018 Dlk • Design Life Kids</p>
+        <p class="copyright">
+          Copyright © 2018 Dlk • Design Life Kids
+        </p>
         <p class="design-company">
           Web Design — <a href="#">Direct Line Development</a>
         </p>
       </div>
     </footer>
+    <form class="modal-window" action="№" method="POST">
+      <label for="form-name">Name</label>
+      <input type="text" id="form-name" name="name" />
+
+      <label for="form-phone">Phone</label>
+      <input type="text" id="form-phone" name="phone" value="+7" />
+
+      <label for="form-email">Email</label>
+      <input type="email" id="form-email" name="email" />
+
+      <label for="form-message">Message</label>
+      <textarea name="message" id="form-message"></textarea>
+
+      <label for="form-check">
+        By clicking on the button, you consent to the processing of
+        your personal data
+      </label>
+      <input type="checkbox" id="form-check" />
+
+      <button class="button button_green" type="submit">
+        Submit
+      </button>
+      <button type="button"></button>
+    </form>
   </body>
 </html>
