--- a/pages/toys-for-kids/index.html
+++ b/pages/toys-for-kids/index.html
@@ -91,44 +91,56 @@
       </form>
     </section>
     <section class="toy-slider">
-      <h1 class="toy-slider__title">Products display</h1>
+      <h2 class="toy-slider__title">Products display</h2>
       <article class="toy-slider__card">
-        <img src="/images/shark-bag.jpg" alt="SHARKY BEAN BAG CHAIR COVER">
-        <H2 class="card-title">SHARKY BEAN BAG CHAIR COVER</H2>
-        <p class="price">$60.00 USD</p>
+        <a href="#" class="toy-slider__link">
+          <img src="/images/shark-bag.jpg" alt="SHARKY BEAN BAG CHAIR COVER">
+          <H2 class="card-title">SHARKY BEAN BAG CHAIR COVER</H2>
+          <p class="price">$60.00 USD</p>
+        </a>
       </article>
       <article class="toy-slider__card">
-        <img src="/images/brass.jpg" alt="BRASS DECO FRAMES">
-        <H2 class="card-title">BRASS DECO FRAMES</H2>
-        <p class="price">$66.00 USD></p>
+        <a href="#" class="toy-slider__link">
+          <img src="/images/brass.jpg" alt="BRASS DECO FRAMES">
+          <H2 class="card-title">BRASS DECO FRAMES</H2>
+          <p class="price">$66.00 USD></p>
+        </a>
       </article>
       <article class="toy-slider__card">
-        <img src="/images/apron.jpg" alt="CIBO FULL APRON">
-        <H2 class="card-title">CIBO FULL APRON</H2>
-        <p class="price">$60.00 USD</p>
+        <a href="#" class="toy-slider__link">
+          <img src="/images/apron.jpg" alt="CIBO FULL APRON">
+          <H2 class="card-title">CIBO FULL APRON</H2>
+          <p class="price">$60.00 USD</p>
+        </a>
       </article>
       <article class="toy-slider__card">
-        <img src="/images/gumball-machine.jpg" alt="GATCHA GATCHA GUMBALL MACHINE">
-        <H2 class="card-title">GATCHA GATCHA GUMBALL MACHINE</H2>
-        <p class="price">$56.00 USD</p>
+        <a href="#" class="toy-slider__link">
+          <img src="/images/gumball-machine.jpg" alt="GATCHA GATCHA GUMBALL MACHINE">
+          <H2 class="card-title">GATCHA GATCHA GUMBALL MACHINE</H2>
+          <p class="price">$56.00 USD</p>
+        </a>
       </article>
       <article class="toy-slider__card">
-        <img src="/images/christmas-candle.jpg" alt="CHRISTMAS ADVENT SCENTED CANDLE">
-        <H2 class="card-title">CHRISTMAS ADVENT SCENTED CANDLE</H2>
-        <p class="price">$29.00 USD</p>
+        <a href="#" class="toy-slider__link">
+          <img src="/images/christmas-candle.jpg" alt="CHRISTMAS ADVENT SCENTED CANDLE">
+          <H2 class="card-title">CHRISTMAS ADVENT SCENTED CANDLE</H2>
+          <p class="price">$29.00 USD</p>
+        </a>
       </article>
       <article class="toy-slider__card">
-        <img src="/images/tangle_spinning_tea_light.jpg" alt="TANGLE SPINNING TEA LIGHT">
-        <H2 class="card-title">TANGLE SPINNING TEA LIGHT</H2>
-        <p class="price">$56.00 USD</p>
+        <a href="#" class="toy-slider__link">
+          <img src="/images/tangle_spinning_tea_light.jpg" alt="TANGLE SPINNING TEA LIGHT">
+          <H2 class="card-title">TANGLE SPINNING TEA LIGHT</H2>
+          <p class="price">$56.00 USD</p>
+        </a>
       </article>
       <div class="toy-slider__nav">
         <button class="toy-slider__arrow left"></button>
         <button class="toy-slider__arrow right"></button>
-        <button class="toy-slider-btn">1</button>
-        <button class="toy-slider-btn">2</button>
-        <button class="toy-slider-btn">3</button>
-        <button class="toy-slider-btn">4</button>
+        <a href="#" class="toy-slider-btn">1</a>
+        <a href="#" class="toy-slider-btn">2</a>
+        <a href="#" class="toy-slider-btn">3</a>
+        <a href="#" class="toy-slider-btn">4</a>
       </div>
     </section>
     </main>
