--- a/pages/toys-for-kids/index.html
+++ b/pages/toys-for-kids/index.html
@@ -47,43 +47,43 @@
         <fieldset>
           <legend class="filter-legend">Color</legend>
           <label>
-            <input class="filter-color" type="checkbox" name="color" checked>
+            <input class="filter-color" type="checkbox" name="color" value="black" checked>
             Black
           </label>
           <label>
-            <input class="filter-color" type="checkbox" name="color">
+            <input class="filter-color" type="checkbox" name="color" value="blue">
             Blue
           </label>
           <label>
-            <input class="filter-color" type="checkbox" name="color">
+            <input class="filter-color" type="checkbox" name="color" value="green">
             Green
           </label>
           <label>
-            <input class="filter-color" type="checkbox" name="color">
+            <input class="filter-color" type="checkbox" name="color" value="white">
             White
           </label>
         </fieldset>
         <fieldset>
           <legend class="filter-legend">Delivery</legend>
           <label>
-            <input class="filter-delivery" type="radio" name="delivery">Free shipping
+            <input class="filter-delivery" type="radio" name="delivery" value="free">Free shipping
           </label>
           <label>
-            <input class="filter-delivery" type="radio" name="delivery" checked>Fast shipping
+            <input class="filter-delivery" type="radio" name="delivery" value="fast" checked>Fast shipping
           </label>
         </fieldset>
         <fieldset>
           <legend class="filter-legend">Amount</legend>
           <label>
-            <input class="filter-amount" type="radio" name="amount" checked>
+            <input class="filter-amount" type="radio" name="amount" value="0-5" checked>
             0-5
           </label>
           <label>
-            <input class="filter-amount" type="radio" name="amount">
+            <input class="filter-amount" type="radio" name="amount" value="10-20">
             10-20
           </label>
           <label>
-            <input class="filter-amount" type="radio" name="amount">
+            <input class="filter-amount" type="radio" name="amount" value="20-50">
             20-50
           </label>
         </fieldset>
@@ -95,48 +95,48 @@
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
           <img src="/images/shark-bag.jpg" alt="SHARKY BEAN BAG CHAIR COVER">
-          <H2 class="card-title">SHARKY BEAN BAG CHAIR COVER</H2>
-          <p class="price">$60.00 USD</p>
         </a>
+        <H3 class="card-title"><a href="#">SHARKY BEAN BAG CHAIR COVER</a></H3>
+        <p class="price">$60.00 USD</p>
       </article>
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
           <img src="/images/brass.jpg" alt="BRASS DECO FRAMES">
-          <H2 class="card-title">BRASS DECO FRAMES</H2>
-          <p class="price">$66.00 USD></p>
         </a>
+        <H3 class="card-title"><a href="#">BRASS DECO FRAMES</a></H3>
+        <p class="price">$66.00 USD></p>
       </article>
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
           <img src="/images/apron.jpg" alt="CIBO FULL APRON">
-          <H2 class="card-title">CIBO FULL APRON</H2>
-          <p class="price">$60.00 USD</p>
         </a>
+        <H3 class="card-title"><a href="#">CIBO FULL APRON</a></H3>
+        <p class="price">$60.00 USD</p>
       </article>
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
           <img src="/images/gumball-machine.jpg" alt="GATCHA GATCHA GUMBALL MACHINE">
-          <H2 class="card-title">GATCHA GATCHA GUMBALL MACHINE</H2>
-          <p class="price">$56.00 USD</p>
         </a>
+        <H3 class="card-title"><a href="#">GATCHA GATCHA GUMBALL MACHINE</a></H3>
+        <p class="price">$56.00 USD</p>
       </article>
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
           <img src="/images/christmas-candle.jpg" alt="CHRISTMAS ADVENT SCENTED CANDLE">
-          <H2 class="card-title">CHRISTMAS ADVENT SCENTED CANDLE</H2>
-          <p class="price">$29.00 USD</p>
         </a>
+        <H3 class="card-title"><a href="#">CHRISTMAS ADVENT SCENTED CANDLE</a></H3>
+        <p class="price">$29.00 USD</p>
       </article>
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
           <img src="/images/tangle_spinning_tea_light.jpg" alt="TANGLE SPINNING TEA LIGHT">
-          <H2 class="card-title">TANGLE SPINNING TEA LIGHT</H2>
-          <p class="price">$56.00 USD</p>
         </a>
+        <H3 class="card-title"><a href="#">TANGLE SPINNING TEA LIGHT</a></H3>
+        <p class="price">$56.00 USD</p>
       </article>
       <div class="toy-slider__nav">
-        <button class="toy-slider__arrow left"></button>
-        <button class="toy-slider__arrow right"></button>
+        <a href="#" class="toy-slider__arrow left"></a>
+        <a href="#" class="toy-slider__arrow right"></a>
         <a href="#" class="toy-slider-btn">1</a>
         <a href="#" class="toy-slider-btn">2</a>
         <a href="#" class="toy-slider-btn">3</a>
